agrego SASS a todas las paginas

--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,2 +1,10 @@
 @import "partials/main";
-@import "partials/header"
+@import "partials/header";
+@import "partials/nav";
+@import "partials/acerca-de";
+@import "partials/contacto";
+@import "partials/que-son";
+@import "partials/servicios";
+@import "partials/gallery";
+@import "partials/footer";
+@import "partials/general";
