--- a/css/partials/_nav.scss
+++ b/css/partials/_nav.scss
@@ -45,3 +45,16 @@
         gap: 20px;
     }
 }
+
+.pink-background{
+    background: rgb(242, 160, 174);
+}
+.animation-darken{
+    transition: all 1s;
+    font-family: 'Imbue', serif;
+    font-size: 2rem;
+}
+
+.animation-darken:hover{
+    background-color: rgb(161, 105, 114);
+}
