--- a/css/partials/_contacto.scss
+++ b/css/partials/_contacto.scss
@@ -1,6 +1,6 @@
 #wrapper-contacto{
     grid-area: main;
-    background-color: rgba(209, 209, 209, 0.8);
+    background-color: $light-background-color;
     padding: 10px 20px 50px;
 }
 
@@ -49,7 +49,7 @@
     }
 
     .form-button {
-        color: rgb(242, 160, 174);;
+        color: black;
         border-radius: 0px;
         border: #000000 solid 1px;
         background-color: rgb(48, 48, 48);
