--- a/css/partials/_main.scss
+++ b/css/partials/_main.scss
@@ -4,7 +4,7 @@
     margin: auto;
     padding: 10px 20px 50px;
     text-align: center;
-    background-color: rgba(209, 209, 209, 0.8);
+    background-color: $light-background-color;
 }
 
 .presentation{
