--- a/css/partials/_nav.scss
+++ b/css/partials/_nav.scss
@@ -6,10 +6,10 @@
 .nav-menu{
     display:flex;
     flex-direction: column;
-    background-color: rgb(242, 160, 174);
+    background-color: $color-pink;
 
     li{
-        background-color: rgb(242, 160, 174);
+        background-color: $color-pink;
         flex: 1;
         list-style-type: none;
         text-align: center;
@@ -26,7 +26,7 @@
     }
 
     li:hover{
-        background-color: rgb(161, 105, 114);
+        background-color: $color-pink-darker;
     }
 }
 
@@ -47,7 +47,7 @@
 }
 
 .pink-background{
-    background: rgb(242, 160, 174);
+    background: $color-pink;
 }
 .animation-darken{
     transition: all 1s;
@@ -56,5 +56,5 @@
 }
 
 .animation-darken:hover{
-    background-color: rgb(161, 105, 114);
+    background-color: $color-pink-darker;
 }
