--- a/css/partials/_que-son.scss
+++ b/css/partials/_que-son.scss
@@ -4,7 +4,7 @@
     margin: auto;
     padding: 10px 20px 50px;
     text-align: center;
-    background-color: rgba(209, 209, 209, 0.8);
+    background-color: $light-background-color;
 
     .titulo-que-son {
         font-size: 60px;
@@ -18,6 +18,12 @@
         justify-content: center;
         align-items: center;
         gap: 30px;
+
+        > * {
+            width: 80%;
+            height: auto;
+            margin: 10px 0px;
+        }
     }
 
     .parrafo-que-son {
@@ -32,12 +38,6 @@
         width: 460px;
         height: 320px;
     }
-}
-
-.imagen-parrafo > * {
-    width: 80%;
-    height: auto;
-    margin: 10px 0px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -55,6 +55,13 @@
             justify-content: center;
             align-items: center;
             gap: 30px;
+
+            > * {
+                width: 80%;
+                height: auto;
+                margin-top: 50px ;
+                margin-bottom: 50px;
+            }
         }
 
         .parrafo-que-son {
@@ -69,13 +76,6 @@
             width: 800px;
             height: 600px;
         }
-    }
-
-    .imagen-parrafo > * {
-        width: 80%;
-        height: auto;
-        margin-top: 50px ;
-        margin-bottom: 50px;
     }
 
 }
