--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,13 @@
 .cabecera .searchForm {
   text-align: end;
 }
+.cabecera > * {
+  flex: 1 1 10px;
+  align-self: center;
+  min-width: auto;
+  min-height: auto;
+  margin: 0px 20px;
+}
 .cabecera .locationContainer a {
   font-family: "Playfair Display", serif;
   font-size: 1em;
@@ -108,15 +115,7 @@
   transform: color 1s;
 }
 .cabecera .locationContainer a:hover {
-  color: rgb(111, 0, 255);
-}
-
-.cabecera > * {
-  flex: 1 1 10px;
-  align-self: center;
-  min-width: auto;
-  min-height: auto;
-  margin: 0px 20px;
+  color: rgb(42, 0, 51);
 }
 
 #dondeEncontrarnos {
@@ -320,7 +319,7 @@
   font-family: "Playfair Display", serif;
 }
 .formulario-contacto .form-button {
-  color: rgb(242, 160, 174);
+  color: black;
   border-radius: 0px;
   border: #000000 solid 1px;
   background-color: rgb(48, 48, 48);
@@ -361,6 +360,11 @@
   align-items: center;
   gap: 30px;
 }
+#que-son-wrapper .imagen-parrafo > * {
+  width: 80%;
+  height: auto;
+  margin: 10px 0px;
+}
 #que-son-wrapper .parrafo-que-son {
   font-size: 20px;
   font-family: "Playfair Display", serif;
@@ -370,12 +374,6 @@
   margin-top: 20px;
   width: 460px;
   height: 320px;
-}
-
-.imagen-parrafo > * {
-  width: 80%;
-  height: auto;
-  margin: 10px 0px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -392,6 +390,12 @@
     align-items: center;
     gap: 30px;
   }
+  #que-son-wrapper .imagen-parrafo > * {
+    width: 80%;
+    height: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
   #que-son-wrapper .parrafo-que-son {
     font-size: 20px;
     font-family: "Playfair Display", serif;
@@ -401,12 +405,6 @@
     margin-top: 5px;
     width: 800px;
     height: 600px;
-  }
-  .imagen-parrafo > * {
-    width: 80%;
-    height: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
   }
 }
 .main-wrapper .servicios-parrafo-container {
