--- a/css/partials/_variables.scss
+++ b/css/partials/_variables.scss
@@ -1,3 +1,2 @@
-$color-pink: rgb(242, 160, 174);
-$color-pink-darker: rgb(161, 105, 114);
 $light-background-color: rgba(209, 209, 209, 0.8);
+$main-font: 'Playfair Display', serif;
