--- a/css/partials/_acerca-de.scss
+++ b/css/partials/_acerca-de.scss
@@ -11,7 +11,7 @@
     .titulo-acerca-de {
         display: inline-block;
         padding: 5px 10px;
-        background-color: rgba(242, 160, 174, 0.8);
+        background-color: map-get($pinks-map, color-pink-translucid);
         width: 80%;
         margin: auto;
     
@@ -22,9 +22,8 @@
         padding: 5px 10px;
         width: 80%;
         font-size: 15px;
-        font-family: 'Playfair Display', serif;
-        background-color: rgba(242, 160, 174, 0.8);
-    
+        font-family: $main-font;
+        background-color: map-get($pinks-map, color-pink-translucid);
     }
 
     .subtitulo-acerca-de {
@@ -34,7 +33,7 @@
         font-size: 20px;
         font-family: 'Playfair Display', serif;
         margin-bottom: 20px;
-        background-color: rgba(242, 160, 174, 0.8);
+        background-color: map-get($pinks-map, color-pink-translucid);
     }
 }
 
