--- a/css/partials/_gallery.scss
+++ b/css/partials/_gallery.scss
@@ -38,7 +38,7 @@
     padding: 5px;
     box-sizing: border-box;
     margin: 20px auto;
-    background-color: rgba(242, 160, 174, 0.8);
+    background-color: map-get($pinks-map, color-pink-translucid);
     transition: all 0.5s;
 
     &:hover{
