--- a/css/partials/_header.scss
+++ b/css/partials/_header.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: $color-pink;
+    background-color: map-get($pinks-map, color-pink);
 
     .logoLink{
     text-align: center;
@@ -56,7 +56,7 @@
     button {
         height: 32px;
         border-radius: 0px;
-        color: $color-pink;
+        color: map-get($pinks-map, color-pink);
         font-size: 15px;
         background-color: #000000;
         /* margin-right: 40px; */
