--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,6 @@
 @import "partials/variables";
+@import "partials/maps";
+@import "partials/mixins";
 @import "partials/main";
 @import "partials/header";
 @import "partials/nav";
