--- a/css/styles.css
+++ b/css/styles.css
@@ -185,8 +185,8 @@
 @media screen and (min-width: 1024px) {
   .nav-container {
     grid-area: nav;
-    position: -webkit-sticky;
-    position: sticky;
+    position: -webkit-sticky !important;
+    position: sticky !important;
     top: 0px;
     z-index: 1;
   }
