--- a/css/partials/_acerca-de.scss
+++ b/css/partials/_acerca-de.scss
@@ -31,7 +31,7 @@
         margin: auto;
         padding: 10px 20px;
         font-size: 20px;
-        font-family: 'Playfair Display', serif;
+        font-family: $main-font;
         margin-bottom: 20px;
         background-color: map-get($pinks-map, color-pink-translucid);
     }
