--- a/css/partials/_contacto.scss
+++ b/css/partials/_contacto.scss
@@ -31,12 +31,12 @@
 
 .titulo-contacto {
     font-size: 30px;
-    font-family: 'Playfair Display', serif;
+    font-family: $main-font;
 }
 
 .parrafo-contacto {
     font-size: 20px;
-    font-family: 'Playfair Display', serif;
+    font-family: $main-font;
     margin-bottom: 10px;
 
 }
@@ -45,7 +45,7 @@
     width: 400px;
 
     label{
-        font-family: 'Playfair Display', serif;
+        font-family: $main-font;
     }
 
     .form-button {
