--- a/css/partials/_gallery.scss
+++ b/css/partials/_gallery.scss
@@ -3,7 +3,7 @@
     padding: 5px 10px;
     width: 80%;
     font-size: px;
-    font-family: 'Playfair Display', serif;
+    font-family: $main-font;
     background-color: rgba(242, 160, 174, 0.863);
 }
 
