--- a/css/partials/_header.scss
+++ b/css/partials/_header.scss
@@ -25,7 +25,7 @@
 
     .locationContainer {
         a {
-            font-family: 'Playfair Display', serif;
+            font-family: $main-font;
             font-size: 1em;
             text-decoration: none;
             color: grey;
