--- a/css/partials/_main.scss
+++ b/css/partials/_main.scss
@@ -31,7 +31,7 @@
 }
 
 .presentationTitulo{
-    font-family: 'Playfair Display', serif;
+    font-family: $main-font;
     font-size: 30px;
 }
 
@@ -44,7 +44,7 @@
 }
 
 .presentationParrafo{
-    font-family: 'Playfair Display', serif;
+    font-family: $main-font;
     font-size: 20px;
 }
 
