--- a/css/partials/_mixins.scss
+++ b/css/partials/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin paragraph-text {
     font-size: 15px;
-    font-family: 'Playfair Display', serif;
-    background-color: $color-pink-translucid;
+    font-family: $main-font;
+    background-color: map-get($pinks-map, color-pink-translucid);;
 }
