--- a/css/partials/_gallery.scss
+++ b/css/partials/_gallery.scss
@@ -4,7 +4,7 @@
     width: 80%;
     font-size: px;
     font-family: $main-font;
-    background-color: rgba(242, 160, 174, 0.863);
+    background-color: map-get($pinks-map, color-pink-translucid);
 }
 
 .gallery-title{
@@ -14,6 +14,7 @@
 
 .gallery-paragraph{
     @extend %written-text-gallery;
+    width: 60%;
     font-size: 15px;
 }
 
