--- a/css/partials/_que-son.scss
+++ b/css/partials/_que-son.scss
@@ -30,13 +30,33 @@
         font-size: 30px;
     }
 
-    iframe{
-        margin-top: 20px;
-        width: 460px;
-        height: 320px;
+    .video-wrapper{
+        float: none;
+        clear: both;
+        margin: 20px auto ;
+        width: 90%;
+        height: auto;
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 25px;
+        height: 0;
+        
+        iframe{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
-
+@media screen and (min-width: 540px) {
+    .video-wrapper{
+        margin-top: 20px;
+        width: 90%;
+        height: 300px;
+    }
+}
 @media screen and (min-width: 1024px) {
 
     #que-son-wrapper{
@@ -66,7 +86,7 @@
             margin-bottom: 10px;
         }
 
-        iframe{
+        .video-wrapper{
             margin-top: 5px;
             width: 800px;
             height: 600px;
