--- a/css/styles.css
+++ b/css/styles.css
@@ -375,12 +375,32 @@
   border-radius: 10px;
   font-size: 30px;
 }
-#que-son-wrapper iframe {
-  margin-top: 20px;
-  width: 460px;
-  height: 320px;
+#que-son-wrapper .video-wrapper {
+  float: none;
+  clear: both;
+  margin: 20px auto;
+  width: 90%;
+  height: auto;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+}
+#que-son-wrapper .video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
+@media screen and (min-width: 540px) {
+  .video-wrapper {
+    margin-top: 20px;
+    width: 90%;
+    height: 300px;
+  }
+}
 @media screen and (min-width: 1024px) {
   #que-son-wrapper {
     width: 1000px;
@@ -405,7 +425,7 @@
     font-size: 28px;
     margin-bottom: 10px;
   }
-  #que-son-wrapper iframe {
+  #que-son-wrapper .video-wrapper {
     margin-top: 5px;
     width: 800px;
     height: 600px;
