--- a/css/partials/_main.scss
+++ b/css/partials/_main.scss
@@ -12,16 +12,16 @@
 
     .presentationTextContainer--left {
         position: absolute;
-        top: 20%;
-        left: 10%;
-        width: 200px;
+        top: 25%;
+        left: 5%;
+        width: 40%;
     }
 
     .presentationTextContainer--right {
         position: absolute;
         top: 20%;
-        left: 70%;
-        width: 200px;
+        left: 60%;
+        width: 40%;
     }
 }
 
@@ -32,7 +32,7 @@
 
 .presentationTitulo{
     font-family: $main-font;
-    font-size: 30px;
+    font-size: 5vw;
 }
 
 .presentationTitulo.textoOscuro{
@@ -45,7 +45,7 @@
 
 .presentationParrafo{
     font-family: $main-font;
-    font-size: 20px;
+    font-size: 2.5vw;
 }
 
 .presentationParrafo.textoOscuro{
@@ -56,8 +56,6 @@
 .presentationParrafo.textoClaro {
     color: rgb(255, 227, 232);
 }
-
-
 
 @media screen and (min-width:1024px) {
 
