--- a/css/styles.css
+++ b/css/styles.css
@@ -14,15 +14,15 @@
 }
 .presentation .presentationTextContainer--left {
   position: absolute;
-  top: 20%;
-  left: 10%;
-  width: 200px;
+  top: 25%;
+  left: 5%;
+  width: 40%;
 }
 .presentation .presentationTextContainer--right {
   position: absolute;
   top: 20%;
-  left: 70%;
-  width: 200px;
+  left: 60%;
+  width: 40%;
 }
 
 .presentation-img {
@@ -32,7 +32,7 @@
 
 .presentationTitulo {
   font-family: "Playfair Display", serif;
-  font-size: 30px;
+  font-size: 5vw;
 }
 
 .presentationTitulo.textoOscuro {
@@ -45,7 +45,7 @@
 
 .presentationParrafo {
   font-family: "Playfair Display", serif;
-  font-size: 20px;
+  font-size: 2.5vw;
 }
 
 .presentationParrafo.textoOscuro {
